objects/OrderMilestonesDetails__mdt/OrderMilestonesDetails__mdt.object-meta.xml
<CustomObject>
    <label>Order Milestones Details</label>
    <pluralLabel>Order Milestones Details</pluralLabel>
</CustomObject>