objects/OrderMilestonesDetails__mdt/fields/eventName__c.field-meta.xml
<CustomField>
    <fullName>eventName__c</fullName>
    <description>Name of the Order Milestone for which the rule applies</description>
    <label>event Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>