objects/OrderMilestonesDetails__mdt/fields/eventSource__c.field-meta.xml
<CustomField>
    <fullName>eventSource__c</fullName>
    <description>This field describes the Milestone Source for the Order Milestone</description>
    <label>eventSource</label>
    <length>80</length>
    <type>Text</type>
</CustomField>