objects/OrderMilestonesDetails__mdt/fields/eventType__c.field-meta.xml
<CustomField>
    <fullName>eventType__c</fullName>
    <description>Type of the Order Milestone for which the rule applies</description>
    <label>Event Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>